src/test/ui/hr-subtype/hr-subtype.free_inv_x_vs_free_inv_y.nll.stderr
warning: not reporting region error due to nll
  --> $DIR/hr-subtype.rs:43:26
   |
LL |               gimme::<$t2>(None::<$t1>);
   |                            ^^^^^^^^^^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

warning: not reporting region error due to nll
  --> $DIR/hr-subtype.rs:49:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^
...
LL | / check! { free_inv_x_vs_free_inv_y: (fn(Inv<'x>),
LL | |                                     fn(Inv<'y>)) }
   | |__________________________________________________- in this macro invocation

error: compilation successful
  --> $DIR/hr-subtype.rs:110:1
   |
LL | / fn main() {
LL | | //[bound_a_vs_bound_a]~^ ERROR compilation successful
LL | | //[bound_a_vs_bound_b]~^^ ERROR compilation successful
LL | | //[bound_inv_a_vs_bound_inv_b]~^^^ ERROR compilation successful
LL | | //[bound_co_a_vs_bound_co_b]~^^^^ ERROR compilation successful
LL | | //[free_x_vs_free_x]~^^^^^ ERROR compilation successful
LL | | }
   | |_^

error: aborting due to previous error

